# house_price_prediction_mlops

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
data/raw/: kc_house_data.csv.dvc
scripts/: create_expectation_suite.py  download_data.py
scripts/gx/: great_expectations.yml
scripts/gx/checkpoints/: kc_house_checkpoint.json
scripts/gx/expectations/: .ge_store_backend_id  kc_house_raw.json
scripts/gx/validation_definitions/: kc_house_validation.json
src/: data_loader.py
